Fix align items of button component

--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -6,6 +6,11 @@
   cursor: pointer;
 
   transition: filter 0.2s;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .button:hover {
